--- a/WebApp/Views/OtrasNecesidades/pv_CardOtrasNecesidades.cshtml
+++ b/WebApp/Views/OtrasNecesidades/pv_CardOtrasNecesidades.cshtml
@@ -9,7 +9,7 @@
         <div class="card-content col s12 m9 l9">
             <h6>@Model.Nombre</h6>
             <div class="col s12 m8 l8">
-                <p>@Model.Descripcion</p>
+                <p class="truncate">@Model.Descripcion</p>
                 <p>@Model.FechaCreacion.ToString("d")</p>
             </div>
             <div class="col offset-m1 offset-l1 m3 l3">
