--- a/WebApp/Views/Necesidad/_pvCamposDetalle.cshtml
+++ b/WebApp/Views/Necesidad/_pvCamposDetalle.cshtml
@@ -146,7 +146,10 @@
         if (Model.IdUsuarioCreador == ViewBag.idUsuario)
         {
             <div class="input-field col s12">
-                <a class="btn btn-primary col s3 push-s8 push-l8" href="./ModificarNecesidad?idNecesidad=@Model.IdNecesidad">Modificar</a>
+                @if (Model.FechaFin >= DateTime.Now)
+                {
+                    <a class="btn btn-primary col s3 push-s8 push-l8" href="./ModificarNecesidad?idNecesidad=@Model.IdNecesidad">Modificar</a>
+                }
                 @if (Model.Estado == 1)
                 {
                     <a class="btn btn-danger col s3" href="./BajaNecesidad?idNecesidad=@Model.IdNecesidad">Dar de baja</a>
