--- a/WebApp/Views/Necesidad/_pvCamposModificacion.cshtml
+++ b/WebApp/Views/Necesidad/_pvCamposModificacion.cshtml
@@ -11,15 +11,6 @@
     @Html.ValidationMessageFor(o => o.Nombre)
 </div>
 
-
-@*<div class="form-group">
-        @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @readonly = "true", @value = ViewBag.necesidad.Nombre, @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-        </div>
-    </div>*@
-
 <div class="input-field push-s1 col s5">
     @Html.LabelFor(o => o.TelefonoContacto)
     @Html.EditorFor(o => o.TelefonoContacto)
@@ -33,7 +24,7 @@
 </div>
 
 <div class="input-field col s12">
-    @Html.EditorFor(o => o.FechaFin)
+    @Html.EditorFor(o => o.FechaFin, new { htmlAttributes = new { @class = "validate datepicker" } })
     @Html.ValidationMessageFor(o => o.FechaFin)
 </div>
 
@@ -133,11 +124,11 @@
             <span>CAMBIAR FOTO</span>
             <input type="file">
             @Html.TextBoxFor(o => o.Foto, new { type = "file", name = "archivo" })
-            @Html.ValidationMessageFor(o => o.Foto)
         </div>
+        @Html.ValidationMessageFor(o => o.Foto)
     </div>
 </div>
 
 <div class="input-field col s12">
-    <button class="btn btn-primary col s3 push-s8 push-l8">Agregar Necesidad</button>
+    <button class="btn btn-primary col s3 push-s8 push-l8">Modificar Necesidad</button>
 </div>
