Fix bloquear necesidad despues de 5 denuncias

--- a/WebApp/Views/Necesidad/_pvCamposDetalle.cshtml
+++ b/WebApp/Views/Necesidad/_pvCamposDetalle.cshtml
@@ -217,7 +217,7 @@
 
 <div id="form-donacion-insumo-container" style="display:none;">
     <form action="./RealizarDonacionInsumo">
-        decimal monto, string comprobante
+        <div>
         <input name="idNecesidad" id="idNecesidad" type="hidden" value="@Model.IdNecesidad" readonly />
 
         <div class="input-field">
@@ -242,6 +242,7 @@
 
         <div class="col s12">
             <button class="btn btn-primary">Confirmar</button>
+        </div>
         </div>
     </form>
 </div>
